# perception_ros2_ws

./: .gitignore  README.md  autoware.repos
.devcontainer/: Dockerfile  devcontainer.json
ansible/playbooks/: install_spconv.yml
ansible/roles/spconv/defaults/: main.yml
docker/: build.sh
rviz/: perception_demo.rviz
src/universe/autoware_universe/perception/autoware_euclidean_cluster/launch/: euclidean_cluster.launch.xml
src/universe/autoware_universe/perception/autoware_lidar_centerpoint/: CMakeLists.txt
src/universe/autoware_universe/perception/autoware_lidar_centerpoint/cmake/Modules/: FindCUDNN.cmake
src/universe/autoware_universe/perception/autoware_lidar_centerpoint/config/: centerpoint_custom.param.yaml
src/universe/autoware_universe/perception/autoware_lidar_centerpoint/launch/: lidar_centerpoint_tiny.launch.xml
src/universe/autoware_universe/perception/autoware_tensorrt_common/: CMakeLists.txt
src/universe/autoware_universe/perception/autoware_tensorrt_common/cmake/Modules/: FindTENSORRT.cmake
src/universe/autoware_universe/perception/autoware_tensorrt_plugins/: CMakeLists.txt
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/: CMakeLists.txt
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/include/autoware/pointcloud_preprocessor/concatenate_data/: concatenation_info_manager.hpp
src/universe/autoware_universe/sensing/autoware_pointcloud_preprocessor/src/concatenate_data/: collector_matching_strategy.cpp
